第一次引入dist

--- a/src/list.html
+++ b/src/list.html
@@ -16,7 +16,7 @@
     <!-- 公用侧边导航 -->
     <nav id="common-nav">
         <li></li>
-        <li class="active">首页</li>
+        <li>首页</li>
         <li>优惠券</li>
         <li>钱包</li>
         <li>客户服务</li>
@@ -145,8 +145,11 @@
                 </div>
             </div> -->
         </div>
+
         <script src="./script/promise_ajax.js"></script>
         <script src="./script/list.js"></script>
+        <!-- <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+        <script src="./thirdplugins/jquery.lazyload.js"></script> -->
 </body>
 
 </html>
