--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- 公用侧边导航 -->
     <nav id="common-nav">
         <li></li>
-        <li class="active">首页</li>
+        <li>首页</li>
         <li>优惠券</li>
         <li>钱包</li>
         <li>客户服务</li>
@@ -85,6 +85,105 @@
         </div>
     </div>
     <!-- 页面内容 -->
+    <div class="body_wrap">
+        <div class="header">
+            <div class="header-title">
+                <span class="iconfont icon-menu2"></span>
+                <a href="">主体市场</a>
+            </div>
+            <div>
+                <p>限时快抢</p>
+            </div>
+        </div>
+        <div class="goodsbox">
+            <div class="goodsitem">
+                <div class="items">
+                    <ul>
+                        <li class="first">
+                            <p class="bold">上衣</p>
+                            <p> <a href="list.html" class="colored">T恤</a><span class="iconfont icon-xinxi"></span></p>
+                            <p class="colored">时尚套装</p>
+                            <p>卫衣</p>
+                        </li>
+                        <li>
+                            <p class="bold">裙子</p>
+                            <p class="colored">连衣裙<span class="iconfont icon-xinxi"></span></p>
+                            <p>半身裙</p>
+                            <p>美裙套装</p>
+                        </li>
+                        <li>
+                            <p class="bold">裤子</p>
+                            <p class="colored">牛仔裤<span class="iconfont icon-xinxi"></span></p>
+                            <p>休闲裤</p>
+                            <p class="colored">运动裤<span class="iconfont icon-xinxi"></span></p>
+                        </li>
+                        <li>
+                            <p class="bold">女鞋</p>
+                            <p>靴子<span class="iconfont icon-xinxi"></span></p>
+                            <p class="colored">单鞋</p>
+                            <p>休闲运动</p>
+                        </li>
+                        <li>
+                            <p class="bold">包包</p>
+                            <p>双肩包<span class="iconfont icon-xinxi"></span></p>
+                            <p class="colored">斜挎包</p>
+                            <p>迷你小包</p>
+                        </li>
+                        <li>
+                            <p class="bold">男友</p>
+                            <p class="colored">T恤</p>
+                            <p>休闲裤</p>
+                            <p>休闲鞋<span class="iconfont icon-xinxi"></span></p>
+                        </li>
+                        <li>
+                            <p class="bold">家居</p>
+                            <p class="colored">冰丝凉席</p>
+                            <p>夏凉被</p>
+                            <p class="colored">降温风扇</p>
+                        </li>
+                        <li>
+                            <p class="bold">内衣</p>
+                            <p>睡衣</p>
+                            <p>内裤</p>
+                        </li>
+                        <li>
+                            <p class="bold">母婴</p>
+                            <p>萌宝童装<span class="iconfont icon-xinxi"></span></p>
+                            <p>孕妇装</p>
+                            <p class="colored">萌宝童鞋</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bgpic">
+                    <img src="https://s10.mogucdn.com/mlcdn/c45406/200518_4jii5c87gfla14844j9j23cae4hi7_1134x440.jpg" alt="">
+                </div>
+                <div class="infos">
+                    <div class="info info1">
+                        <p class="denglu"><span class="iconfont icon-yonghufangkeshu" style="font-size: 70px; color: #ff94c6;"></span></p>
+                        <p style="font-size: 12px;">菇凉好！&nbsp;<strong>欢迎来到蘑菇街~</strong></p>
+                        <p>会员中心</p>
+                    </div>
+                    <div class="info info2">
+                        <p><strong>来蘑菇街APP</strong></p>
+                        <p style="font-size: 13px;">海量时尚好货</p>
+                        <img src="https://s10.mogucdn.com/mlcdn/c45406/190408_3cke94elb1k0799a9aib3bdkk75ab_260x260.png_999x999.v1c0.81.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 轮播 -->
+        <div class="outerbox">
+            <div class="countdown">
+                <img src="https://s10.mogucdn.com/mlcdn/c45406/180423_4c1k410gfcjj100b7ck185ldbc1d4_460x588.png" alt="">
+                <div class="hour"></div>
+                <div class="min"></div>
+                <div class="second"></div>
+            </div>
+            <div class="bannerbox"></div>
+        </div>
+
+    </div>
+    <script src="./script/index.js"></script>
 </body>
 
 </html>
