--- a/src/list.html
+++ b/src/list.html
@@ -7,8 +7,8 @@
     <meta name="description" content="欢迎来到蘑菇街上衣-T恤 上衣频道，上万精通上衣-T恤挑款的达人为您提供上衣-T恤价格、上衣-T恤优惠、上衣-T恤评价、上衣-T恤品牌、上衣-T恤搭配、上衣-T恤新款、上衣-T恤排行等信息。过亿购物达人在蘑菇街发现最流行的上衣-T恤、明星抖音网红同款上衣-T恤，分享上衣-T恤购物经验、笔记。买上衣-T恤，先逛蘑菇街。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>上衣-T恤 上衣【价格 评价 搭配 新款 图片 品牌】蘑菇街商城</title>
-    <link rel="stylesheet" href="css/list.css">
-    <link rel="stylesheet" href="fonts/font1/iconfont.css">
+    <link rel="stylesheet" href="./css/list.css">
+    <link rel="stylesheet" href="css/iconfont.css">
 
 </head>
 
@@ -131,7 +131,7 @@
         </div>
         <!-- 页面清单-商品 -->
         <div class="goods_content ">
-            <!-- <div class="goods">
+            <!-- <a href="detail.html" class="goods">
                 <div class="box"><img src="https://s5.mogucdn.com/mlcdn/c45406/190506_0127lj54g1ahf815k31ab9j49c378_640x960.jpg_440x587.v1cAC.40.webp" alt="">
                 </div>
                 <p>夏2020新款韩版纯色宽松短款洋气小衫学生网红短袖T恤女上衣</p>
@@ -143,7 +143,7 @@
                     <span class="iconfont icon-shoucang"></span>
                     <span>252</span>
                 </div>
-            </div> -->
+            </a> -->
         </div>
 
         <script src="./script/promise_ajax.js"></script>
