css与html大致完成

--- a/src/detail.html
+++ b/src/detail.html
@@ -15,7 +15,7 @@
     <!-- 公用侧边导航 -->
     <nav id="common-nav">
         <li></li>
-        <li>首页</li>
+        <li><a href="index.html">首页</a></li>
         <li>优惠券</li>
         <li>钱包</li>
         <li>客户服务</li>
@@ -69,7 +69,7 @@
                         </li>
                         <li class="gouwuche">
                             <span class="iconfont icon-dilanxianxingiconyihuifu_huabanfuben" style="margin-left: 3px;"></span>
-                            <p>购物车</p>
+                            <p> <a href="cart.html">购物车</a></p>
                         </li>
                         <li class="xiazai">
                             <span class="iconfont icon-erweima" style="margin-left: 6px;"></span>
@@ -212,6 +212,7 @@
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
