--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,10 @@
                         </li>
                     </ul>
                     <div class="login">
-                        <img src="https://s10.mogucdn.com/mlcdn/c45406/181016_143l3ehl4ebad6c2326gjk6d4h41g_48x48.png" alt="">
-                        <p>登录</p>
+                        <a href="login.html">
+                            <img src="https://s10.mogucdn.com/mlcdn/c45406/181016_143l3ehl4ebad6c2326gjk6d4h41g_48x48.png" alt="">
+                            <p> 登录</p>
+                        </a>
                     </div>
                 </div>
             </div>
