--- a/src/list.html
+++ b/src/list.html
@@ -16,7 +16,7 @@
     <!-- 公用侧边导航 -->
     <nav id="common-nav">
         <li></li>
-        <li>首页</li>
+        <li> <a href="index.html">首页</a></li>
         <li>优惠券</li>
         <li>钱包</li>
         <li>客户服务</li>
@@ -145,10 +145,73 @@
                 </div>
             </a> -->
         </div>
+    </div>
+    <!-- 底部 -->
+    <div class="footer">
+        <div class="contentbox">
+            <div class="brand">
+                <img src="https://s10.mogucdn.com/mlcdn/c45406/181112_4a8ch8fac2i12ib313hif4da35ed3_280x76.png" alt="">
+            </div>
+            <div class="content">
+                <div class="top">
+                    <p>新手帮助</p>
+                    <p>权益保障</p>
+                    <p>支付方式</p>
+                    <p>移动客户端下载</p>
+                </div>
+                <div class="xian">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <ul class="items01">
+                    <li>
+                        <p>常见问题</p>
+                        <p>自主服务</p>
+                        <p>联系客服</p>
+                        <p>意见反馈</p>
+                    </li>
+                    <li>
+                        <p>全国包邮</p>
+                        <p>7天无理由退货</p>
+                        <p>退货运费补贴</p>
+                        <p>限时发货</p>
+                    </li>
+                    <li>
+                        <p>微信支付</p>
+                        <p>支付宝</p>
+                        <p>自付美支付</p>
+                    </li>
+                    <li>
+                        <P>蘑菇街</P>
+                        <p>美丽说</p>
+                        <p>uni引力</p>
+                    </li>
+                </ul>
+                <ul class="items02">
+                    <li>关于我们</li>
+                    <li>招聘信息</li>
+                    <li>联系我们</li>
+                    <li>商家入驻</li>
+                    <li>商家后台</li>
+                    <li>规则中心</li>
+                    <li>规则众议院</li>
+                    <li>有害信息举报</li>
+                    <li>用户隐私保护</li>
+                </ul>
+            </div>
+            <div class="bottom">
+                <p>——————————————————————————————&emsp;&emsp;©2020 Mogu.com 杭州卷瓜网络有限公司&emsp;&emsp;—————————————————————————————</p>
+                <p>营业执照：913301065526808764 | 营业性演出许可证 | 网络文化经营许可证 | 网络信息服务信用承诺书 | 增值电信业务经营许可证：浙B2-20110349 | 安全责任书 |</p>
+                <p>浙公网安备 33010602010221号 | 互联网药品信息服务资格证书编号：（浙)-经营性-2018-0002 | 浙网食A33010003 | 出版物网络交易平台服务经营备案证 | (浙)网械平台备字[2018]第00006号 |</p>
+            </div>
+        </div>
+    </div>
 
-        <script src="./script/promise_ajax.js"></script>
-        <script src="./script/list.js"></script>
-        <!-- <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="./script/promise_ajax.js"></script>
+    <script src="./script/list.js"></script>
+    <!-- <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
         <script src="./thirdplugins/jquery.lazyload.js"></script> -->
 </body>
 
