--- a/src/cart.html
+++ b/src/cart.html
@@ -159,7 +159,15 @@
                 </li>
             </nav>
         </div>
-        <div class="cart_footer"></div>
+        <div class="cart_footer">
+            <p> <input type="checkbox" name="cart" value="">&emsp;全选</p>
+            <p>删除</p>
+            <p>清空告罄商品</p>
+            <p>移入收藏夹</p>
+            <p>共有<span>0</span>件商品，总计：</p>
+            <p>¥&nbsp;<span>0.00</span></p>
+            <p>去付款</p>
+        </div>
     </div>
     <!-- 底部 -->
     <div class="footer">
