--- a/src/detail.html
+++ b/src/detail.html
@@ -68,8 +68,10 @@
                             <p>收藏</p>
                         </li>
                         <li class="gouwuche">
-                            <span class="iconfont icon-dilanxianxingiconyihuifu_huabanfuben" style="margin-left: 3px;"></span>
-                            <p> <a href="cart.html">购物车</a></p>
+                            <a href="cart.html" target="_blank">
+                                <span class="iconfont icon-dilanxianxingiconyihuifu_huabanfuben" style="margin-left: 3px;"></span>
+                                <p> 购物车</p>
+                            </a>
                         </li>
                         <li class="xiazai">
                             <span class="iconfont icon-erweima" style="margin-left: 6px;"></span>
