--- a/src/list.html
+++ b/src/list.html
@@ -209,10 +209,10 @@
         </div>
     </div>
 
-    <script src="./script/promise_ajax.js"></script>
+    <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+    <!-- <script src="./script/promise_ajax.js"></script> -->
     <script src="./script/list.js"></script>
-    <!-- <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
-        <script src="./thirdplugins/jquery.lazyload.js"></script> -->
+    <script src="./thirdplugins/jquery.lazyload.js"></script>
 </body>
 
 </html>
