--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                         关于我们&nbsp;<span class="iconfont icon-xiala" style="font-size: 12px;color: #999;"></span>
                     
                     </a>
-                    <div class="header-abouts-box"></div>
+                    <ul class="header-abouts-box"></ul>
                 </div>
             </div>
         </div>
@@ -57,6 +57,7 @@
                                 "></span>
                             </div>
                         </form>
+                        <div class="search_box"></div>
                     </div>
                     <ul>
                         <li class="xiaoxi">
@@ -77,7 +78,7 @@
                         </li>
                     </ul>
                     <div class="login">
-                        <a href="login.html">
+                        <a href="login.html" target="_blank">
                             <img src="https://s10.mogucdn.com/mlcdn/c45406/181016_143l3ehl4ebad6c2326gjk6d4h41g_48x48.png" alt="">
                             <p> 登录</p>
                         </a>
@@ -103,7 +104,7 @@
                     <ul>
                         <li class="first">
                             <p class="bold">上衣</p>
-                            <p> <a href="list.html" class="colored">T恤</a><span class="iconfont icon-xinxi"></span></p>
+                            <p> <a href="list.html" class="colored" target="_blank">T恤</a><span class="iconfont icon-xinxi"></span></p>
                             <p class="colored">时尚套装</p>
                             <p>卫衣</p>
                         </li>
@@ -184,6 +185,44 @@
             <div class="bannerbox">
                 <ul>
                     <li>
+                        <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/200522_332afjdgl1j8ej63idjjiila05d3b_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                    <li>
+                        <div class="pic"><img src="" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                    <li>
+                        <div class="pic"><img src="" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                    <li>
+                        <div class="pic"><img src="" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/200531_202elg099209l13g5b1d2chfjcc71_3999x5999.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                    <li>
+                        <div class="pic"><img src="" alt=""></div>
+                        <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                        <span class="span1">¥55</span>
+                        <span class="span2">¥65</span>
+                    </li>
+                    <li>
                         <div class="pic"><img src="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
@@ -227,18 +266,29 @@
                 <div class="bannerpic">
                     <ul>
                         <li>
-                            <div class="pic"><img src="" alt=""></div>
+                            <div class="pic"><img src="https://s11.mogucdn.com/mlcdn/c45406/190905_33542k3364gcej73bi8iakgkajdcb_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
                             <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                             <span class="span1">¥55</span>
                         </li>
                         <li>
-                            <div class="pic"><img src="" alt=""></div>
+                            <div class="pic"><img src="https://s11.mogucdn.com/mlcdn/55cf19/191107_5cf43al5ki1gll7kj4b946407d1bi_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
                             <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                             <span class="span1">¥55</span>
                         </li>
                         <li></li>
                         <li></li>
+                        <li>
+                            <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/190305_370i6e35l9h41e8agk4i8g477c1ge_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                            <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+                            <span class="span1">¥55</span>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+
                     </ul>
+                    <p>&lt;</p>
+                    <p>&gt;</p>
                 </div>
                 <div class="middle_pic">
                     <a href="" class="pic1">
@@ -740,6 +790,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="./script/index.js"></script>
 </body>
 
