首页列表列js

--- a/src/detail.html
+++ b/src/detail.html
@@ -9,6 +9,17 @@
     <title>夏2020新款韩版纯色宽松短款洋气小衫学生网红短袖T恤女上衣</title>
     <link rel="stylesheet" href="./css/detail.css">
     <link rel="stylesheet" href="css/iconfont.css">
+    <style>
+        .cart_active {
+            padding: 5px 12px;
+            background: rgb(238, 8, 46);
+            border-radius: 50%;
+            position: absolute;
+            color: white;
+            text-align: center;
+            line-height: 25px;
+        }
+    </style>
 </head>
 
 <body>
@@ -128,6 +139,18 @@
         <div class="detailbox">
             <div class="detail_left">
                 <div class="bigpicbox">
+                    <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_6g749b0i49afh6dfa7f308i80h0kh_640x960.jpg_468x468.jpg" alt="">
+                </div>
+                <div class="bigpicbox">
+                    <img src="https://s5.mogucdn.com/mlcdn/c45406/190506_43agd2h2ki02l6kakkl1ae58kbeha_640x960.jpg_468x468.jpg" alt="">
+                </div>
+                <div class="bigpicbox">
+                    <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_50ek0c2c3bb308kaba5cli4460je5_640x960.jpg_468x468.jpg" alt="">
+                </div>
+                <div class="bigpicbox">
+                    <img src="https://s5.mogucdn.com/mlcdn/c45406/190506_5cc027g1i8a5lg8gih78gd2g62b9k_640x960.jpg_468x468.jpg" alt="">
+                </div>
+                <div class="bigpicbox">
                     <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_0127lj54g1ahf815k31ab9j49c378_640x960.jpg_468x468.jpg" alt="">
                 </div>
                 <div class="smallpicbox">
@@ -214,7 +237,8 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="./script/detail.js"></script>
 </body>
 
 </html>
