--- a/src/index.html
+++ b/src/index.html
@@ -185,25 +185,25 @@
             <div class="bannerbox">
                 <ul>
                     <li>
-                        <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/200522_332afjdgl1j8ej63idjjiila05d3b_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="https://s5.mogucdn.com/mlcdn/c45406/200522_332afjdgl1j8ej63idjjiila05d3b_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
@@ -211,25 +211,25 @@
                 </ul>
                 <ul>
                     <li>
-                        <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/200531_202elg099209l13g5b1d2chfjcc71_3999x5999.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="https://s5.mogucdn.com/mlcdn/c45406/200531_202elg099209l13g5b1d2chfjcc71_3999x5999.jpg_400x9999.v1c7E.81.webp" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
                     </li>
                     <li>
-                        <div class="pic"><img src="" alt=""></div>
+                        <div class="pic"><img class="lazy" data-original="" alt=""></div>
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                         <span class="span1">¥55</span>
                         <span class="span2">¥65</span>
@@ -266,26 +266,17 @@
                 <div class="bannerpic">
                     <ul>
                         <li>
-                            <div class="pic"><img src="https://s11.mogucdn.com/mlcdn/c45406/190905_33542k3364gcej73bi8iakgkajdcb_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
+                            <!-- <div class="pic"><img src="https://s11.mogucdn.com/mlcdn/c45406/190905_33542k3364gcej73bi8iakgkajdcb_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
                             <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
-                            <span class="span1">¥55</span>
-                        </li>
-                        <li>
-                            <div class="pic"><img src="https://s11.mogucdn.com/mlcdn/55cf19/191107_5cf43al5ki1gll7kj4b946407d1bi_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
-                            <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
-                            <span class="span1">¥55</span>
-                        </li>
-                        <li></li>
-                        <li></li>
-                        <li>
-                            <div class="pic"><img src="https://s5.mogucdn.com/mlcdn/c45406/190305_370i6e35l9h41e8agk4i8g477c1ge_640x960.jpg_400x9999.v1c7E.81.webp" alt=""></div>
-                            <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
-                            <span class="span1">¥55</span>
+                            <span class="span1">¥55</span> -->
                         </li>
                         <li></li>
                         <li></li>
                         <li></li>
-
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                     </ul>
                     <p>&lt;</p>
                     <p>&gt;</p>
@@ -344,7 +335,7 @@
             <div class="center_goods">
                 <ul>
                     <li>
-                        <a href=""><img src="https://s5.mogucdn.com/mlcdn/c45406/190704_15aijdc1f7bkb84021eh7dhebd96f_690x960.jpg_400x400.v1cAC.40.webp" alt="">
+                        <!-- <a href=""><img src="https://s5.mogucdn.com/mlcdn/c45406/190704_15aijdc1f7bkb84021eh7dhebd96f_690x960.jpg_400x400.v1cAC.40.webp" alt="">
                             <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
                             <span>¥85.3</span>
                         </a>
@@ -367,7 +358,7 @@
                         <a href=""><img src="" alt="">
                             <p></p>
                             <span></span>
-                        </a>
+                        </a> -->
                     </li>
                     <li></li>
                     <li></li>
@@ -376,7 +367,7 @@
                     <li></li>
                 </ul>
                 <div class="btnsbox">
-                    <p></p>
+                    <p class="active"></p>
                     <p></p>
                     <p></p>
                     <p></p>
@@ -390,9 +381,9 @@
                 </div>
                 <div class="hot_goods active">
                     <a href="">
-                        <img src="https://s11.mogucdn.com/mlcdn/c45406/181006_6lgl4i0hfla45fi18b2gg89j54kl3_640x960.jpg_360x360.v1cAC.40.webp" alt="">
+                        <!-- <img src="https://s11.mogucdn.com/mlcdn/c45406/181006_6lgl4i0hfla45fi18b2gg89j54kl3_640x960.jpg_360x360.v1cAC.40.webp" alt="">
                         <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
-                        <span>¥39.00</span>
+                        <span>¥39.00</span> -->
                     </a>
                     <a href=""></a>
                     <a href=""></a>
@@ -457,24 +448,15 @@
                 </div>
                 <div class="hot_goods active">
                     <a href="">
-                        <img src="https://s11.mogucdn.com/p2/161002/87242333_4f099dej89chdhiah2b48c1aekdfe_640x960.jpg_360x360.v1cAC.40.webp" alt="">
+                        <!-- <img src="https://s11.mogucdn.com/p2/161002/87242333_4f099dej89chdhiah2b48c1aekdfe_640x960.jpg_360x360.v1cAC.40.webp" alt="">
                         <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
+                        <span>¥58.80</span> -->
                     </a>
                     <a href="">
-                        <img src="https://s11.mogucdn.com/p2/161002/87242333_4f099dej89chdhiah2b48c1aekdfe_640x960.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
                     </a>
                     <a href="">
-                        <img src="https://s11.mogucdn.com/p2/160909/115837898_4h5h8706hf72kjia2jc48ei5ljg55_642x961.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
                     </a>
                     <a href="">
-                        <img src="https://s11.mogucdn.com/mlcdn/c45406/190226_8b7a6h95g66j28gjad855f561i6ea_640x960.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
                     </a>
                 </div>
                 <div class="hot_goods"></div>
@@ -535,24 +517,18 @@
                 </div>
                 <div class="hot_goods active">
                     <a href="">
-                        <img src="https://s5.mogucdn.com/mlcdn/c45406/190920_685jbkge66db71jhkf31j1aih95fg_640x960.jpg_360x360.v1cAC.40.webp" alt="">
+                        <!-- <img src="https://s5.mogucdn.com/mlcdn/c45406/190920_685jbkge66db71jhkf31j1aih95fg_640x960.jpg_360x360.v1cAC.40.webp" alt="">
                         <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
+                        <span>¥58.80</span> -->
                     </a>
                     <a href="">
-                        <img src="https://s5.mogucdn.com/mlcdn/c45406/191117_8651511aag1kch62jifjec9a6k8ld_640x960.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
+
                     </a>
                     <a href="">
-                        <img src="https://s11.mogucdn.com/mlcdn/c45406/180329_0cc1j7b9kjl7bfcc76c49j679ec27_640x960.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
+
                     </a>
                     <a href="">
-                        <img src="https://s11.mogucdn.com/mlcdn/c45406/190705_1a03l1fdlkliihea8j32fbl7316dh_640x960.jpg_360x360.v1cAC.40.webp" alt="">
-                        <p>木可男装2019春季新款工装裤男潮牌ins阔腿裤宽松大码裤子男韩版潮流chic直筒休闲男裤</p>
-                        <span>¥58.80</span>
+
                     </a>
                 </div>
                 <div class="hot_goods"></div>
@@ -791,6 +767,8 @@
         </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="./thirdplugins/jquery.lazyload.js"></script>
     <script src="./script/index.js"></script>
 </body>
 
