--- a/src/list.html
+++ b/src/list.html
@@ -9,7 +9,7 @@
     <title>上衣-T恤 上衣【价格 评价 搭配 新款 图片 品牌】蘑菇街商城</title>
     <link rel="stylesheet" href="./css/list.css">
     <link rel="stylesheet" href="css/iconfont.css">
-
+    <link rel="stylesheet" href="./css/pagination.css">
 </head>
 
 <body>
@@ -103,8 +103,8 @@
         <div class="goods_about">
             <ul>
                 <li><span>综合</span></li>
-                <li><span>销量</span></li>
-                <li><span>新品</span></li>
+                <li><span>价格</span></li>
+                <li><span>热度</span></li>
                 <li>
                     <span class="iconfont icon-renminbi" style="font-size: 10px;"></span>
                     <input type="text" name="" id="">
@@ -144,6 +144,10 @@
                     <span>252</span>
                 </div>
             </a> -->
+        </div>
+        <div class="pagelist">
+            <div class="m-style page">
+            </div>
         </div>
     </div>
     <!-- 底部 -->
@@ -211,8 +215,9 @@
 
     <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script src="./script/promise_ajax.js"></script> -->
-    <script src="./script/list.js"></script>
     <script src="./thirdplugins/jquery.lazyload.js"></script>
+    <script src="./thirdplugins/jquery.pagination.js"></script>
+    <script src="./script/list.js"></script>
 </body>
 
 </html>
