--- a/src/cart.html
+++ b/src/cart.html
@@ -125,7 +125,7 @@
         </div>
         <div class="cart_nav">
             <ul>
-                <li> <input type="checkbox" name="cart" value="">&emsp;全选</li>
+                <li> <input type="checkbox" name="cart" value="" class="allsel">&emsp;全选</li>
                 <li>商品信息</li>
                 <li>单价(元)</li>
                 <li>数量</li>
@@ -160,7 +160,7 @@
             </nav>
         </div>
         <div class="cart_footer">
-            <p> <input type="checkbox" name="cart" value="">&emsp;全选</p>
+            <p> <input type="checkbox" name="cart" value="" class="allsel">&emsp;全选</p>
             <p>删除</p>
             <p>清空告罄商品</p>
             <p>移入收藏夹</p>
@@ -231,6 +231,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="./thirdplugins/jquery.cookie.js"></script>
+    <script src="./script/cart.js"></script>
 </body>
 
 </html>
