--- a/src/detail.html
+++ b/src/detail.html
@@ -139,26 +139,26 @@
         <div class="detailbox">
             <div class="detail_left">
                 <div class="bigpicbox">
-                    <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_6g749b0i49afh6dfa7f308i80h0kh_640x960.jpg_468x468.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="bigpicbox">
-                    <img src="https://s5.mogucdn.com/mlcdn/c45406/190506_43agd2h2ki02l6kakkl1ae58kbeha_640x960.jpg_468x468.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="bigpicbox">
-                    <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_50ek0c2c3bb308kaba5cli4460je5_640x960.jpg_468x468.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="bigpicbox">
-                    <img src="https://s5.mogucdn.com/mlcdn/c45406/190506_5cc027g1i8a5lg8gih78gd2g62b9k_640x960.jpg_468x468.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="bigpicbox">
-                    <img src="https://s11.mogucdn.com/mlcdn/c45406/190506_0127lj54g1ahf815k31ab9j49c378_640x960.jpg_468x468.jpg" alt="">
+                    <img src="" alt="">
                 </div>
                 <div class="smallpicbox">
-                    <div class="smallbox"><img src="https://s11.mogucdn.com/mlcdn/c45406/190506_6g749b0i49afh6dfa7f308i80h0kh_640x960.jpg_100x100.jpg" alt=""></div>
-                    <div class="smallbox"><img src="https://s5.mogucdn.com/mlcdn/c45406/190506_43agd2h2ki02l6kakkl1ae58kbeha_640x960.jpg_100x100.jpg" alt=""></div>
-                    <div class="smallbox"><img src="https://s11.mogucdn.com/mlcdn/c45406/190506_50ek0c2c3bb308kaba5cli4460je5_640x960.jpg_100x100.jpg" alt=""></div>
-                    <div class="smallbox"><img src="https://s5.mogucdn.com/mlcdn/c45406/190506_5cc027g1i8a5lg8gih78gd2g62b9k_640x960.jpg_100x100.jpg" alt=""></div>
-                    <div class="smallbox"><img src="https://s11.mogucdn.com/mlcdn/c45406/190506_0127lj54g1ahf815k31ab9j49c378_640x960.jpg_100x100.jpg" alt=""></div>
+                    <div class="smallbox"><img src="" alt=""></div>
+                    <div class="smallbox"><img src="" alt=""></div>
+                    <div class="smallbox"><img src="" alt=""></div>
+                    <div class="smallbox"><img src="" alt=""></div>
+                    <div class="smallbox"><img src="" alt=""></div>
                 </div>
             </div>
             <div class="detail_mid">
@@ -185,7 +185,7 @@
                     <span>尺码：</span>
                     <div class="size_select">
                         <p>M</p>
-                        <p class="xuxian">L</p>
+                        <p>L</p>
                         <p>XL</p>
                         <p>XXL</p>
                     </div>
@@ -238,6 +238,8 @@
         </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="./script/promise_ajax.js"></script>
+    <script src="./script/cookie.js"></script>
     <script src="./script/detail.js"></script>
 </body>
 
