--- a/src/login.html
+++ b/src/login.html
@@ -39,9 +39,9 @@
                     </div>
                     <div class="items items2">
                         <form action="" method="">
-                            <input type="text" value="" placeholder="账号/邮箱/手机号" maxlength="11" name="iphonenum">
-                            <input type="password" value="" placeholder="请输入密码" name="password">
-                            <input type="submit" value="登录" name="submit">
+                            <input type="text" value="" placeholder="账号/邮箱/手机号" autocomplete="off" name="username" class="username">
+                            <input type="password" value="" placeholder="请输入密码" name="password" class="password">
+                            <input type="submit" value="登录" name="submit" class="submit">
                         </form>
                     </div>
                 </div>
@@ -75,6 +75,9 @@
         </div>
 
     </div>
+
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="./script/sha1.js"></script>
     <script src="./script/login.js"></script>
 </body>
 
