--- a/src/cart.html
+++ b/src/cart.html
@@ -7,6 +7,7 @@
     <meta name="description" content="蘑菇街是女生专属的一站式消费平台。这里有上万个精通购物和穿搭的时尚达人，每天在直播间里推荐当季值得买的时尚好物、限时折扣的品牌商品以及源自工厂的性价比好货。蘑菇街的商品均由平台官方审核供应商资质和品质，让消费者轻松享受变美体验。">
     <meta name="og:title" content="购物车_蘑菇街">
     <title>购物车_蘑菇街</title>
+    <link rel="icon" href="https://s10.mogucdn.com/mlcdn/c45406/170401_16fj5k6k4174bfd21d03a4gf6a7hg_48x48.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/cart.css">
     <link rel="stylesheet" href="css/iconfont.css">
 
@@ -161,7 +162,7 @@
         </div>
         <div class="cart_footer">
             <p> <input type="checkbox" name="cart" value="" class="allsel">&emsp;全选</p>
-            <p>删除</p>
+            <p>删除选中的商品</p>
             <p>清空告罄商品</p>
             <p>移入收藏夹</p>
             <p>共有<span>0</span>件商品，总计：</p>
