--- a/src/detail.html
+++ b/src/detail.html
@@ -7,6 +7,7 @@
     <meta name="description" content="蘑菇街是女生专属的一站式消费平台。这里有上万个精通购物和穿搭的时尚达人，每天在直播间里推荐当季值得买的时尚好物、限时折扣的品牌商品以及源自工厂的性价比好货。蘑菇街的商品均由平台官方审核供应商资质和品质，让消费者轻松享受变美体验。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>夏2020新款韩版纯色宽松短款洋气小衫学生网红短袖T恤女上衣</title>
+    <link rel="icon" href="https://s10.mogucdn.com/mlcdn/c45406/170401_16fj5k6k4174bfd21d03a4gf6a7hg_48x48.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/detail.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <style>
@@ -15,6 +16,7 @@
             background: rgb(238, 8, 46);
             border-radius: 50%;
             position: absolute;
+            z-index: 999;
             color: white;
             text-align: center;
             line-height: 25px;
@@ -140,17 +142,9 @@
             <div class="detail_left">
                 <div class="bigpicbox">
                     <img src="" alt="">
+                    <div class="zoom"></div>
                 </div>
-                <div class="bigpicbox">
-                    <img src="" alt="">
-                </div>
-                <div class="bigpicbox">
-                    <img src="" alt="">
-                </div>
-                <div class="bigpicbox">
-                    <img src="" alt="">
-                </div>
-                <div class="bigpicbox">
+                <div class="zoombox">
                     <img src="" alt="">
                 </div>
                 <div class="smallpicbox">
