--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="蘑菇街是女生专属的一站式消费平台。这里有上万个精通购物和穿搭的时尚达人，每天在直播间里推荐当季值得买的时尚好物、限时折扣的品牌商品以及源自工厂的性价比好货。蘑菇街的商品均由平台官方审核供应商资质和品质，让消费者轻松享受变美体验。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蘑菇街商城</title>
+    <link rel="icon" href="https://s10.mogucdn.com/mlcdn/c45406/170401_16fj5k6k4174bfd21d03a4gf6a7hg_48x48.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -54,7 +55,7 @@
                             <input type="text" id="text" class="ts_txt ts_high" placeholder="连衣裙" name="" value="" autocomplete="off">
                             <div class="submit-btn">
                                 <span class="iconfont icon-fangdajing_huaban1
-                                "></span>
+                                    "></span>
                             </div>
                         </form>
                         <div class="search_box"></div>
@@ -86,6 +87,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     <!-- 页面内容 -->
     <div class="body_wrap">
@@ -766,7 +768,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="./thirdplugins/jquery.lazyload.js"></script>
     <script src="./script/index.js"></script>
