--- a/src/list.html
+++ b/src/list.html
@@ -7,6 +7,7 @@
     <meta name="description" content="欢迎来到蘑菇街上衣-T恤 上衣频道，上万精通上衣-T恤挑款的达人为您提供上衣-T恤价格、上衣-T恤优惠、上衣-T恤评价、上衣-T恤品牌、上衣-T恤搭配、上衣-T恤新款、上衣-T恤排行等信息。过亿购物达人在蘑菇街发现最流行的上衣-T恤、明星抖音网红同款上衣-T恤，分享上衣-T恤购物经验、笔记。买上衣-T恤，先逛蘑菇街。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>上衣-T恤 上衣【价格 评价 搭配 新款 图片 品牌】蘑菇街商城</title>
+    <link rel="icon" href="https://s10.mogucdn.com/mlcdn/c45406/170401_16fj5k6k4174bfd21d03a4gf6a7hg_48x48.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/list.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="./css/pagination.css">
