--- a/src/login.html
+++ b/src/login.html
@@ -7,6 +7,7 @@
     <meta name="copyright" content="mogujie.com">
     <meta name="description" content="美丽联合集团是女性时尚媒体和时尚消费平台，通过整合现在已有的资源，包括电商、社区、红人、内容等等，来服务于不同的女性用户。蘑菇街是集团旗下定位于年轻女性用户的时尚媒体与时尚消费类App，核心用户人群为 18-23 岁年轻女性用户。2015年，蘑菇街以当红明星李易峰和“我的买手街”的品牌定位，成功树立了自身以买手精选为核心理念的差异化品牌形象。2016年，迪丽热巴以首席体验官的身份代表广大用户加入蘑菇街，从而更好地为年轻女性用户提供从美妆、穿搭分享到时尚购物的一站式消费体验。">
     <title>登录</title>
+    <link rel="icon" href="https://s10.mogucdn.com/mlcdn/c45406/170401_16fj5k6k4174bfd21d03a4gf6a7hg_48x48.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/iconfont.css">
 </head>
@@ -41,6 +42,8 @@
                         <form action="" method="">
                             <input type="text" value="" placeholder="账号/邮箱/手机号" autocomplete="off" name="username" class="username">
                             <input type="password" value="" placeholder="请输入密码" name="password" class="password">
+                            <input type="text" value="" placeholder="请输入验证码" name="captcha" class="captcha" autocomplete="off">
+                            <p><label for="">验证码：</label><img alt="验证码" onClick="this.src='../php/code.php?time='+new Date().getTime();" src="../php/code.php?time='+new Date().getTime();" style="cursor:pointer;"></p>
                             <input type="submit" value="登录" name="submit" class="submit">
                         </form>
                     </div>
